Page MenuHome GnuPG

libgcrypt: bug fix for PPC bulk AES-GCM acceleratieration, missing HWF_PPC_ARCH_3_10 in HW feature
Closed, ResolvedPublic

Description

To fix the HW feature, HWF_PPC_ARCH_3_10, did not include in the ppc-features list. Without this HW feature list, bulk operation never got invoked.

Event Timeline

dannytsen created this object in space S1 Public.

Added the HWF_PPC_ARCH_3_10 list in ppc_features[] in src/hwf-ppc.c.

Looks like that line went missing in third/final version of AES-GCM patch at https://dev.gnupg.org/T5700

Fixed in master. I rechecked that bulk implementation passes tests with qemu-ppc64le.

Hi Jussi, yes for some reason, it went missing, I was checking performance numbers and found out the line went missing. Thanks.