hwf-ppc: fix missing HWF_PPC_ARCH_3_10 in HW feature

* src/hwf-ppc.c (ppc_features): Add HWF_PPC_ARCH_3_10.
--

GnuPG-bug-id: T5913
Signed-off-by: Jussi Kivilinna <jussi.kivilinna@iki.fi>